# libtss-ethereum

./: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  rustfmt.toml
.github/workflows/: build_and_publish.yml  lint.yml
__test__/: index.spec.ts
examples/: test-ethers.js  test-keygen.js  test-sign.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: ethers.rs  lib.rs  napi.rs  tx.rs
